--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ text {
 
 /* better using flexbox layout. */
 #checkbox {
-  width: 20%;
+  width: 30%;
   left: 0;
 }
 
@@ -35,6 +35,8 @@ input.cb-element {
 
 </style>
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+<script src="./lib/js/tree.jquery.js"></script>
+<link rel="stylesheet" href="./lib/css/jqtree.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script src="./loadGraph.js"></script>
@@ -54,12 +56,8 @@ var circle_radius = 5; // default circle radius.
 
 
 $(document).ready(function(){
-  d3.json("raw.json", function(err, json){
-    if(err){
-      console.log(err);
-    }
-    console.log(json);
-    dataInitialize(json);
+  d3.json("raw.json", function(err, data){
+    dataInitialize(data);
   })
 });
 
